Specl NEWS - User visible changes.

* Noteworthy changes in release ?.? (????-??-??) [?]

** New features:

  - Vastly improved error diagnostics for syntax errors in spec
    files, reporting filename and line-number of error locations,
    and without spurious Lua-runtime stack traces.

  - New '--unicode' command-line option to support unicode in spec
    files, at the expense of inaccurate line-numbers in error
    messages.

  - Works correctly without ansicolors installed (albeit without
    displaying any color!).

  - If 'luaposix' is installed where Specl can find it, the report
    and progress formatters will use it to display the time spent
    running specifications much more accurately.

** Incompatible changes:

  - Requires lyaml 4 or newer.

  - Unicode characters in spec files are no longer supported by
    default. LibYAML counts indices by character when reporting the
    offsets used to re-extract the Lua code fragments (i.e. without
    YAML neline folding) that Specl uses to generate correct line-
    numbers in error-messages.  Lua string operations require byte
    offsets, which are incompatible.

** Bug fixes:

  - Help2man is no longer required to install specl from the
    distribution tarball.


* Noteworthy changes in release 8 (2013-06-26) [stable]

** New features:

  - Can now be installed directly from a release tarball by `luarocks`.
    No need to run `./configure` or `make`, unless you want to install
    to a custom location, or do not use LuaRocks.

  - A new 'all_of' adaptor for any matcher:

     expect (mytable).should_contain.all_of {x, y, z}

  - 'contain' matcher handles std.object module derived objects by
    coercing them to tables.

  - 'equal' matcher performs a deep comparison of std.object module
    derived objects' contents.

  - `./bootstrap` runs slowly again with 4800 lines of code
    reintroduced required to automatically manage Slingshot files with